[package]
name = "solana-builtin-cost-info"
description = "Solana builtin programs cost info"
documentation = "https://docs.rs/solana-builtin-cost-info"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_builtin_cost_info"

[dev-dependencies]
solana-logger = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }
