[package]
name = "solana-compute-budget-processor"
description = "Solana compute budget instructions processor"
documentation = "https://docs.rs/solana-compute-budget-processor"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
solana-builtins-default-costs = { workspace = true }
solana-compute-budget = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_compute_budget_processor"

[dev-dependencies]
itertools = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = { workspace = true }

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "solana-sdk/frozen-abi",
]
