[package]
name = "solana-compute-budget-program"
description = "Solana Compute Budget program"
documentation = "https://docs.rs/solana-compute-budget-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
solana-compute-budget = { workspace = true }
solana-runtime-transaction = { workspace = true }
solana-svm-transaction = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_compute_budget_program"

[[bench]]
name = "compute_budget"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
